<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    tools:context="com.fisal.tabletennisscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/first_team"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="#FFFFFFFF" />

            <TextView
                android:id="@+id/first_team_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/first_team_result"
                android:fontFamily="sans-serif-light"
                android:textSize="36sp"
                android:textColor="#000000"
                android:background="#FFFFFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_fails_return_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor1stTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_touches_net_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor1stTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_obstructs_ball_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor1stTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_strikes_ball_twice_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor1stTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/any_of_above_third_time_happens_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addTwoFor1stTeam" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FFFFFFFF" >

            <View
                android:id="@+id/short_split_line"
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/by_opponent_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="112dp"
                android:background="@color/colorPrimary"
                android:text="@string/by_opponent"
                android:textColor="#000000" />

            <View
                android:id="@+id/long_split_line"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/by_opponent_txt"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/second_team"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="#FFFFFFFF" />

            <TextView
                android:id="@+id/second_team_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/second_team_result"
                android:fontFamily="sans-serif-light"
                android:textSize="36sp"
                android:textColor="#000000"
                android:background="#FFFFFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_fails_return_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor2ndTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_touches_net_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor2ndTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_obstructs_ball_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor2ndTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/opponent_strikes_ball_twice_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addOneFor2ndTeam" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/any_of_above_third_time_happens_btn"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="addTwoFor2ndTeam" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_btn"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="resetResult" />

</RelativeLayout>
